# awstemplate

./: .gitignore  LICENSE  awstemplate.cabal  stack.yaml
app/: Main.hs
src/: AWS.hs  Template.hs
src/Data/IP/: Extra.hs
