name:                awstemplate
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/rjosephwright/awstemplate
license:             BSD3
license-file:        LICENSE
author:              Joseph Wright
maintainer:          rjosephwright@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable awstemplate
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , amazonka
                     , amazonka-ec2
                     , text
                     , time
                     , awstemplate
  default-language:    Haskell2010

test-suite awstemplate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , amazonka
                     , amazonka-ec2
                     , text
                     , time
                     , awstemplate
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rjosephwright/awstemplate
