name:                awstemplate
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/rjosephwright/awstemplate
license:             BSD3
license-file:        LICENSE
author:              Joseph Wright
maintainer:          rjosephwright@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.IP.Extra
                     , Template
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , hastache
                     , lens
                     , mtl
                     , iproute
                     , text

executable awstemplate
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , awstemplate
  default-language:    Haskell2010

test-suite awstemplate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , awstemplate
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rjosephwright/awstemplate
